--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -26,18 +26,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Introduction <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -57,10 +51,7 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-col__cw-12">
 						<div className="act-box">
 							<div className="act-card-grid">
-								<LinkTo
-									className="act-card act-card__homepage act-card__feature--none"
-									kind="system-introduction--page"
-								>
+								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="system-introduction--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
@@ -73,10 +64,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__homepage act-card__feature--none"
-									kind="guidelines-overview--page"
-								>
+								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="guidelines-overview--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
@@ -89,10 +77,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__homepage act-card__feature--none"
-									kind="design-tokens-overview--page"
-								>
+								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="design-tokens-overview--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
@@ -105,10 +90,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__homepage act-card__feature--none"
-									kind="layout-overview--page"
-								>
+								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="layout-overview--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
@@ -121,10 +103,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__homepage act-card__feature--none"
-									kind="components-overview--page"
-								>
+								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="components-overview--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
@@ -137,10 +116,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__homepage act-card__feature--none"
-									kind="patterns-overview--page"
-								>
+								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="patterns-overview--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
@@ -153,10 +129,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__homepage act-card__feature--none"
-									kind="previews-overview--page"
-								>
+								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="previews-overview--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
