--- a/src/0-system/ecosystem.stories.mdx
+++ b/src/0-system/ecosystem.stories.mdx
@@ -26,18 +26,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-our-ecosystem--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-our-ecosystem--page">
 											Our ecosystem <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -57,13 +51,9 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-col__cw-12">
 						<div className="act-box">
 							<div className="act-img">
-								<img
-									src="/images/0-system-stack-1.png"
-									alt="Illustration of the current project stack"
-								/>
+								<img src="/images/0-system-stack-1.png" alt="Illustration of the current project stack" />
 								<div className="act-img__description act-p-small">
-									<i class="fa-solid fa-circle-info"></i> Illustration of the current
-									project stack
+									<i class="fa-solid fa-circle-info"></i> Illustration of the current project stack
 								</div>
 							</div>
 						</div>
