--- a/src/2-design-tokens/0-overview.stories.mdx
+++ b/src/2-design-tokens/0-overview.stories.mdx
@@ -26,18 +26,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-overview--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -57,138 +51,98 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-col__cw-12">
 						<div className="act-box">
 							<div className="act-card-grid">
-								<LinkTo
-									className="act-card act-card__primary act-card__feature--icon"
-									kind="design-tokens-breakpoints--page"
-								>
+								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-breakpoints--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
 												<i class="fa-solid fa-left-right"></i>
 											</div>
 											<div class="act-card__title">Breakpoints</div>
-											<div class="act-card__description">
-												Defined points where the design system responds
-												according to the device width
-											</div>
+											<div class="act-card__description">Defined points where the design system responds according to the device width</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__primary act-card__feature--icon"
-									kind="design-tokens-colours--page"
-								>
+								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-colours--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
 												<i class="fa-solid fa-palette"></i>
 											</div>
 											<div class="act-card__title">Colours</div>
-											<div class="act-card__description">
-												Colour plays an important role in creating a consistent
-												and strong visual identify
-											</div>
+											<div class="act-card__description">Colour plays an important role in creating a consistent and strong visual identify</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__primary act-card__feature--icon"
-									kind="design-tokens-interactions--page"
-								>
+								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-interactions--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
 												<i class="fa-solid fa-person-walking"></i>
 											</div>
 											<div class="act-card__title">Interactions</div>
-											<div class="act-card__description">
-												Bring the screen to life, guide users through
-												experiences, and help move them forward
-											</div>
+											<div class="act-card__description">Bring the screen to life, guide users through experiences, and help move them forward</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__primary act-card__feature--icon"
-									kind="design-tokens-radius--page"
-								>
+								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-radius--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
 												<i class="fa-solid fa-circle"></i>
 											</div>
 											<div class="act-card__title">Radius</div>
-											<div class="act-card__description">
-												Border-radius values to ensure a consistent shape of
-												elements
-											</div>
+											<div class="act-card__description">Border-radius values to ensure a consistent shape of elements</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__primary act-card__feature--icon"
-									kind="design-tokens-shadows--page"
-								>
+								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-shadows--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
 												<i class="fa-solid fa-sun"></i>
 											</div>
 											<div class="act-card__title">Shadows</div>
-											<div class="act-card__description">
-												Box-shadow values to create depth within the interface
-											</div>
+											<div class="act-card__description">Box-shadow values to create depth within the interface</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__primary act-card__feature--icon"
-									kind="design-tokens-spacing--page"
-								>
+								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-spacing--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
 												<i class="fa-solid fa-border-none"></i>
 											</div>
 											<div class="act-card__title">Spacing</div>
-											<div class="act-card__description">
-												The consistent area between elements and components
-											</div>
+											<div class="act-card__description">The consistent area between elements and components</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
 										</div>
 									</div>
 								</LinkTo>
-								<LinkTo
-									className="act-card act-card__primary act-card__feature--icon"
-									kind="design-tokens-typography--page"
-								>
+								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-typography--page">
 									<div class="act-card__container">
 										<div class="act-card__content">
 											<div class="act-card__icon">
 												<i class="fa-solid fa-font"></i>
 											</div>
 											<div class="act-card__title">Typography</div>
-											<div class="act-card__description">
-												Documentation and examples for typography within the
-												design system
-											</div>
+											<div class="act-card__description">Documentation and examples for typography within the design system</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
