--- a/src/3-layout/0-overview.stories.mdx
+++ b/src/3-layout/0-overview.stories.mdx
@@ -26,18 +26,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="layout-overview--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="layout-overview--page">
 											Layout <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -58,18 +52,13 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-box">
 							<h2>Page Structure</h2>
 							<div className="act-img">
-								<img
-									src="/images/3-layout-page-rows-1.png"
-									alt="Illustration of the Design System page structure"
-								/>
+								<img src="/images/3-layout-page-rows-1.png" alt="Illustration of the Design System page structure" />
 								<div className="act-img__description act-p-small">
-									<i class="fa-solid fa-circle-info"></i> Illustration of the Design
-									System page structure
+									<i class="fa-solid fa-circle-info"></i> Illustration of the Design System page structure
 								</div>
 							</div>
 							<p>
-								Page structure in this Design System is defined with class names
-								prefixed with <code>act-flex__</code>
+								Page structure in this Design System is defined with class names prefixed with <code>act-flex__</code>
 							</p>
 							<div className="act-table-container">
 								<table>
@@ -95,11 +84,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code>100vw</code>
 											</td>
 											<td>
-												Provides a parent row that expands to the entire
-												viewport width
+												Provides a parent row that expands to the entire viewport width
 												<br />
-												This parent row can also handle colour/gradient/image
-												backgrounds
+												This parent row can also handle colour/gradient/image backgrounds
 											</td>
 										</tr>
 										<tr>
@@ -116,8 +103,7 @@ import LinkTo from "@storybook/addon-links/react";
 												<code>100%</code>
 											</td>
 											<td>
-												Provides an element that expands to fill the parent
-												container
+												Provides an element that expands to fill the parent container
 												<br />
 												Responsible for centering content on the page
 											</td>
@@ -138,8 +124,7 @@ import LinkTo from "@storybook/addon-links/react";
 											<td>
 												Provides an element to handle rows of content
 												<br />
-												Responsible for stacking content rows vertically and
-												capping content width to <code>1248px</code>
+												Responsible for stacking content rows vertically and capping content width to <code>1248px</code>
 											</td>
 										</tr>
 										<tr>
@@ -172,21 +157,15 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-box">
 							<h2>Column Structure</h2>
 							<p>
-								Column structure within row elements is controlled using the
-								class name <code>act-col</code>
+								Column structure within row elements are controlled using the class name <code>act-col</code>
 							</p>
 							<p>
-								Columns are based on a 12 column layout - they are defined in
-								the CSS using <code>%</code> values
+								Columns are based on a 12 column layout - they are defined in the CSS using <code>%</code> values
 							</p>
 							<div className="act-img">
-								<img
-									src="/images/3-layout-page-columns-1.png"
-									alt="Illustration of the Design System column structure"
-								/>
+								<img src="/images/3-layout-page-columns-1.png" alt="Illustration of the Design System column structure" />
 								<div className="act-img__description act-p-small">
-									<i class="fa-solid fa-circle-info"></i> Illustration of the Design
-									System column structure
+									<i class="fa-solid fa-circle-info"></i> Illustration of the Design System column structure
 								</div>
 							</div>
 							<div className="act-table-container">
@@ -213,8 +192,7 @@ import LinkTo from "@storybook/addon-links/react";
 											<td>
 												Provides a default column
 												<br />
-												Accepts a class name extension to render at different
-												widths
+												Accepts a class name extension to render at different widths
 											</td>
 										</tr>
 										<tr>
@@ -354,17 +332,10 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-box">
 							<h2>Box Structure</h2>
 							<p>
-								Within each column there must be an element with the class name{" "}
-								<code>act-box</code>
+								Within each column there must be an element with the class name <code>act-box</code>
 							</p>
-							<p>
-								This element provides margin and padding to maintain accurate
-								positioning of elements onscreen
-							</p>
-							<p>
-								Components and patterns are then placed directly inside this
-								element
-							</p>
+							<p>This element provides margin and padding to maintain accurate positioning of elements onscreen</p>
+							<p>Components and patterns are then placed directly inside this element</p>
 							<div className="act-table-container">
 								<table>
 									<thead>
