--- a/src/2-design-tokens/colours.stories.mdx
+++ b/src/2-design-tokens/colours.stories.mdx
@@ -26,26 +26,17 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-overview--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-colours--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-colours--page">
 											Colours <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -107,10 +98,7 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#472D8C" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#472D8C" }}></span>
 												<p className="act-p-small">Purple</p>
 											</td>
 											<td>
@@ -125,10 +113,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#1E0F48" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#1E0F48" }}></span>
 												<p className="act-p-small">Violet</p>
 											</td>
 											<td>
@@ -143,10 +128,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#311C6A" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#311C6A" }}></span>
 												<p className="act-p-small">Indigo</p>
 											</td>
 											<td>
@@ -161,19 +143,14 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#6042AE" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#6042AE" }}></span>
 												<p className="act-p-small">Plum Purple</p>
 											</td>
 											<td>
 												<code className="hex">#6042AE</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__plum-purple
-												</code>
+												<code className="sass-var">$act-colour__plum-purple</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "plum-purple")</code>
@@ -181,19 +158,14 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#9A78F2" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#9A78F2" }}></span>
 												<p className="act-p-small">Medium Purple</p>
 											</td>
 											<td>
 												<code className="hex">#9A78F2</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__medium-purple
-												</code>
+												<code className="sass-var">$act-colour__medium-purple</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "medium-purple")</code>
@@ -201,10 +173,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#111111" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#111111" }}></span>
 												<p className="act-p-small">Black</p>
 											</td>
 											<td>
@@ -219,10 +188,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#777777" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#777777" }}></span>
 												<p className="act-p-small">Grey</p>
 											</td>
 											<td>
@@ -237,19 +203,14 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#ADADAD" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#ADADAD" }}></span>
 												<p className="act-p-small">Middle Grey</p>
 											</td>
 											<td>
 												<code className="hex">#ADADAD</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__middle-grey
-												</code>
+												<code className="sass-var">$act-colour__middle-grey</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "middle-grey")</code>
@@ -257,10 +218,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#FFFFFF" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#FFFFFF" }}></span>
 												<p className="act-p-small">White</p>
 											</td>
 											<td>
@@ -325,10 +283,7 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#098660" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#098660" }}></span>
 												<p className="act-p-small">Green</p>
 											</td>
 											<td>
@@ -343,10 +298,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#BA2133" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#BA2133" }}></span>
 												<p className="act-p-small">Red</p>
 											</td>
 											<td>
@@ -361,10 +313,7 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#F2C94C" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#F2C94C" }}></span>
 												<p className="act-p-small">Yellow</p>
 											</td>
 											<td>
@@ -443,19 +392,14 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#377E7A" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#377E7A" }}></span>
 												<p className="act-p-small">Belconnen</p>
 											</td>
 											<td>
 												<code className="hex">#377E7A</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__region-belconnen
-												</code>
+												<code className="sass-var">$act-colour__region-belconnen</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "region-belconnen")</code>
@@ -463,19 +407,14 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#90A630" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#90A630" }}></span>
 												<p className="act-p-small">Gungahlin</p>
 											</td>
 											<td>
 												<code className="hex">#90A630</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__region-gungahlin
-												</code>
+												<code className="sass-var">$act-colour__region-gungahlin</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "region-gungahlin")</code>
@@ -483,19 +422,14 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#008FC5" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#008FC5" }}></span>
 												<p className="act-p-small">Inner City</p>
 											</td>
 											<td>
 												<code className="hex">#008FC5</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__region-innercity
-												</code>
+												<code className="sass-var">$act-colour__region-innercity</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "region-innercity")</code>
@@ -503,19 +437,14 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#C6B30B" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#C6B30B" }}></span>
 												<p className="act-p-small">Tuggeranong</p>
 											</td>
 											<td>
 												<code className="hex">#C6B30B</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__region-tuggeranong
-												</code>
+												<code className="sass-var">$act-colour__region-tuggeranong</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "region-tuggeranong")</code>
@@ -523,19 +452,14 @@ import LinkTo from "@storybook/addon-links/react";
 										</tr>
 										<tr>
 											<td>
-												<span
-													className="act-icon"
-													style={{ backgroundColor: "#F15F50" }}
-												></span>
+												<span className="act-icon" style={{ backgroundColor: "#F15F50" }}></span>
 												<p className="act-p-small">Woden</p>
 											</td>
 											<td>
 												<code className="hex">#F15F50</code>
 											</td>
 											<td>
-												<code className="sass-var">
-													$act-colour__region-woden
-												</code>
+												<code className="sass-var">$act-colour__region-woden</code>
 											</td>
 											<td>
 												<code>map-get($act-colour, "region-woden")</code>
