--- a/src/4-components/0-overview.stories.mdx
+++ b/src/4-components/0-overview.stories.mdx
@@ -256,6 +256,8 @@ import LinkTo from "@storybook/addon-links/react";
 			</div>
 		</div>
 	</main>
-	<AoC />
-	<Footer />
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
