--- a/src/2-design-tokens/spacing.stories.mdx
+++ b/src/2-design-tokens/spacing.stories.mdx
@@ -194,6 +194,8 @@ import LinkTo from "@storybook/addon-links/react";
 			</div>
 		</div>
 	</main>
-	<AoC />
-	<Footer />
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
