--- a/src/4-components/0-overview.stories.mdx
+++ b/src/4-components/0-overview.stories.mdx
@@ -112,6 +112,20 @@ import LinkTo from "@storybook/addon-links/react";
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
+													<i class="fa-solid fa-quote-left"></i>
+												</div>
+												<div class="act-card__title">Content</div>
+												<div class="act-card__description">xxxx</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
 													<i class="fa-solid fa-shoe-prints"></i>
 												</div>
 												<div class="act-card__title">Footers</div>
